--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a835931ab7.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>Selfcare</title>
 </head>
 <body>
-  
+  <header class="header">
+    <nav class="navigation">
+      <div class="logo">
+        <i class="fa-solid fa-star"></i>
+        <span>Selfcare</span>
+      </div>
+      <div class="menu">
+        <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+        <a href="#"><i class="fa-solid fa-user"></i></a>
+        <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+      </div>
+    </nav>
+    <div class="hero-image">
+      <img src="assets/img/banner.png">
+    </div>
+  </header>
+  <main>
+    <div class="info-promo">
+      <p>Promoção</p>
+      <span>9 produtos</span>
+    </div>
+  </main>
 </body>
 </html>
