Construindo catálogo de produtos

--- a/index.html
+++ b/index.html
@@ -33,6 +33,79 @@
       <p>Promoção</p>
       <span>9 produtos</span>
     </div>
+    <div class="produtos">
+      <div class="produto">
+        <div class="produto-img">
+          <img src="assets/img/gabrielle-henderson-1DMNn6gBbwQ-unsplash.jpg">
+        </div>
+        <p class="desc-produto">Lorem ipsum dolor sit</p>
+        <p class="valor">R$ <span>50,00</span></p>
+      </div>
+
+      <div class="produto">
+        <div class="produto-img">
+          <img src="assets/img/devin-avery-bMH8ub9z1_U-unsplash.jpg">
+        </div>
+        <p class="desc-produto">Lorem ipsum dolor sit</p>
+        <p class="valor">R$ <span>50,00</span></p>
+      </div>
+
+      <div class="produto">
+        <div class="produto-img">
+          <img src="assets/img/devin-avery-BRVqq2uak4E-unsplash.jpg">
+        </div>
+        <p class="desc-produto">Lorem ipsum dolor sit</p>
+        <p class="valor">R$ <span>50,00</span></p>
+      </div>
+
+      <div class="produto">
+        <div class="produto-img">
+          <img src="assets/img/nery-montenegro-SmEty_TVr80-unsplash.jpg">
+        </div>
+        <p class="desc-produto">Lorem ipsum dolor sit</p>
+        <p class="valor">R$ <span>50,00</span></p>
+      </div>
+
+      <div class="produto">
+        <div class="produto-img">
+          <img src="assets/img/olena-sergienko-GOVTETevRm8-unsplash.jpg">
+        </div>
+        <p class="desc-produto">Lorem ipsum dolor sit</p>
+        <p class="valor">R$ <span>50,00</span></p>
+      </div>
+
+      <div class="produto">
+        <div class="produto-img">
+          <img src="assets/img/pharma-hemp-complex-tAzdKblAinw-unsplash.jpg">
+        </div>
+        <p class="desc-produto">Lorem ipsum dolor sit</p>
+        <p class="valor">R$ <span>50,00</span></p>
+      </div>
+
+      <div class="produto">
+        <div class="produto-img">
+          <img src="assets/img/phaedra-botanicals-uFAHrKYkTVI-unsplash.jpg">
+        </div>
+        <p class="desc-produto">Lorem ipsum dolor sit</p>
+        <p class="valor">R$ <span>50,00</span></p>
+      </div>
+
+      <div class="produto">
+        <div class="produto-img">
+          <img src="assets/img/pharma-hemp-complex-yVAXSK6zFIM-unsplash.jpg">
+        </div>
+        <p class="desc-produto">Lorem ipsum dolor sit</p>
+        <p class="valor">R$ <span>50,00</span></p>
+      </div>
+
+      <div class="produto">
+        <div class="produto-img">
+          <img src="assets/img/chandra-oh-y5hRv6UNKMg-unsplash.jpg">
+        </div>
+        <p class="desc-produto">Lorem ipsum dolor sit</p>
+        <p class="valor">R$ <span>50,00</span></p>
+      </div>
+    </div>
   </main>
 </body>
 </html>
