--- a/index.html
+++ b/index.html
@@ -18,21 +18,25 @@
         <i class="fa-solid fa-star"></i>
         <span>Selfcare</span>
       </div>
+
       <div class="menu">
         <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
         <a href="#"><i class="fa-solid fa-user"></i></a>
         <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
       </div>
     </nav>
+
     <div class="hero-image">
       <img src="assets/img/banner.png">
     </div>
   </header>
+
   <main>
     <div class="info-promo">
       <p>Promoção</p>
       <span>9 produtos</span>
     </div>
+
     <div class="produtos">
       <div class="produto">
         <div class="produto-img">
@@ -107,5 +111,22 @@
       </div>
     </div>
   </main>
+
+  <footer class="footer">
+    <div class="info-contato">
+      <div class="contatos">
+        <a href="#">Contato</a>
+        <a href="#">Termos de serviço</a >
+        <a href="#">Política de privacidade</a>
+        <a href="#">Cancelamento, troca e reembolso</a>
+      </div>
+
+      <form class="newsletter">
+        <label for="email">Newsletter</label>
+        <input type="email" name="email" id="email" placeholder="Digite seu melhor email">
+        <button type="submit">Inscrever</button>
+      </form>
+    </div>
+  </footer>
 </body>
 </html>
