--- a/index.html
+++ b/index.html
@@ -121,11 +121,26 @@
         <a href="#">Cancelamento, troca e reembolso</a>
       </div>
 
-      <form class="newsletter">
-        <label for="email">Newsletter</label>
-        <input type="email" name="email" id="email" placeholder="Digite seu melhor email">
-        <button type="submit">Inscrever</button>
-      </form>
+      <div class="email">
+        <p>Newsletter</p>
+        <form class="newsletter">
+          <input type="email" name="email" id="email" placeholder="Digite seu melhor email">
+          <button type="submit">Inscrever</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="social">
+      <div class="social-media">
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-facebook-square"></i>
+      </div>
+      
+      <div class="cartoes">
+        <img src="assets/img/mastercard.svg">
+        <img src="assets/img/paypal.svg">
+        <img src="assets/img/visa.svg">
+      </div>
     </div>
   </footer>
 </body>
