--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-brands fa-facebook-square"></i>
       </div>
-      
+
       <div class="cartoes">
         <img src="assets/img/mastercard.svg">
         <img src="assets/img/paypal.svg">
@@ -143,5 +143,7 @@
       </div>
     </div>
   </footer>
+
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
